# SimpleRunner

./: ''  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CompileBuild.bat  CompileEditor.bat  README.md
.cache/clangd/index/: Application.cpp.B2AD7B39D5C97BA3.idx  Core.hpp.00CA3074C5F0C28D.idx  Editor.cpp.05851B1B17D712A1.idx  SimpleRunner.hpp.E0C1F4A67A3BEA1B.idx  StbImplementation.cpp.7B6A6A01C65744C0.idx  StbImplementation.hpp.C9C563C6068D92A3.idx  context.c.E163EA960092B72F.idx  egl_context.c.D7DD01E733DA335B.idx  glfw3.h.C4F68E1EB1CC2D60.idx  glfw3native.h.29C48E3F3B32863A.idx  imconfig.h.6E2C9DC376C64DB1.idx  imgui.cpp.74BCA5154C1FF2DE.idx  imgui.h.736D3F8F07257F73.idx  imgui_demo.cpp.76A9AFE953E21C71.idx  imgui_draw.cpp.7117E7A5D86E4EA6.idx  imgui_impl_glfw.cpp.365F6B05120A100E.idx  imgui_impl_glfw.h.6818ABC327D8FE21.idx  imgui_impl_opengl3.cpp.AFE06835D8DE56B5.idx  imgui_impl_opengl3.h.8088E6B4A4953C73.idx  imgui_impl_opengl3_loader.h.49B7EFE8D7CFB55B.idx  imgui_internal.h.2E1F21AA47CD8D3D.idx  imgui_stdlib.cpp.3ED2A965AB6E6A1C.idx  imgui_stdlib.h.16EB25E5E090D159.idx  imgui_tables.cpp.AFBD83EB7003795C.idx  imgui_widgets.cpp.B396B14867E7385E.idx  imstb_rectpack.h.B94F6EC1F6CA6036.idx  imstb_textedit.h.CBD549BDFD4A088A.idx  imstb_truetype.h.3A6ED74F26065EA7.idx  (+29 more)
SimpleRunner/: SimpleRunner.cmake
SimpleRunner/src/: EntryPoint.cpp  EntryPoint.hpp  SimpleRunner.hpp
SimpleRunnerEditor/: SimpleRunnerEditor.cmake
SimpleRunnerEditor/src/: Editor.cpp
SimpleRunnerGame/: SimpleRunnerGame.cmake
SimpleRunnerGame/src/: Game.cpp
(+43 files in other folders)
